--- a/index.html
+++ b/index.html
@@ -8,7 +8,8 @@
       href="https://fonts.googleapis.com/css?family=Lato:100,300,400,700,900"
       rel="stylesheet"
     />
-    <link rel="stylesheet" href="style.css" />
+    <link rel="stylesheet" href="css/icon-font.css" />
+    <link rel="stylesheet" href="css/style.css" />
     <link rel="shortcut icon" type="image/png" href="img/favicon.png" />
 
     <title>Natours | Exciting Tour for Adventurous People</title>
@@ -72,6 +73,95 @@
                 alt="Photo 3"
                 class="composition__photo composition__photo--p3"
               />
+            </div>
+          </div>
+        </div>
+      </section>
+
+      <section class="section-features">
+        <div class="row">
+          <div class="col-1-of-4">
+            <div class="feature-box">
+              <i class="feature-box__icon icon-basic-world"></i>
+              <h3 class="heading-tertiary u-margin-bottom-small">
+                Explore the World
+              </h3>
+              <p class="feature-box__text">
+                Lorem ipsum dolor sit, amet consectetur adipisicing elit. Libero
+                pariatur harum neque sunt quaerat inventore.
+              </p>
+            </div>
+          </div>
+          <div class="col-1-of-4">
+            <div class="feature-box">
+              <i class="feature-box__icon icon-basic-compass"></i>
+              <h3 class="heading-tertiary u-margin-bottom-small">
+                Meet Nature
+              </h3>
+              <p class="feature-box__text">
+                Lorem ipsum dolor sit, amet consectetur adipisicing elit. Libero
+                pariatur harum neque sunt quaerat inventore.
+              </p>
+            </div>
+          </div>
+          <div class="col-1-of-4">
+            <div class="feature-box">
+              <i class="feature-box__icon icon-basic-map"></i>
+              <h3 class="heading-tertiary u-margin-bottom-small">
+                Find your Way
+              </h3>
+              <p class="feature-box__text">
+                Lorem ipsum dolor sit, amet consectetur adipisicing elit. Libero
+                pariatur harum neque sunt quaerat inventore.
+              </p>
+            </div>
+          </div>
+          <div class="col-1-of-4">
+            <div class="feature-box">
+              <i class="feature-box__icon icon-basic-heart"></i>
+              <h3 class="heading-tertiary u-margin-bottom-small">
+                Live a healthier Life
+              </h3>
+              <p class="feature-box__text">
+                Lorem ipsum dolor sit, amet consectetur adipisicing elit. Libero
+                pariatur harum neque sunt quaerat inventore.
+              </p>
+            </div>
+          </div>
+        </div>
+      </section>
+      <section class="section-tours">
+        <div class="u-center-text u-margin-bottom-big">
+          <h2 class="heading-secondary">Most popular tours</h2>
+        </div>
+
+        <div class="row">
+          <div class="col-1-of-3">
+            <div class="card">
+              <div class="card__side card__side--front">
+                <div class="card__picture card__picture--1">&nbsp;</div>
+                <div class="card__heading">heading</div>
+                <div class="card__details">details</div>
+              </div>
+              <div class="card__side card__side--back card__side--back-1">
+                Back
+              </div>
+            </div>
+          </div>
+          <div class="col-1-of-3">
+            <div class="card">
+              <div class="card__side card__side--front">Front</div>
+              <div class="card__side card__side--back card__side--back-2">
+                Back
+              </div>
+            </div>
+          </div>
+          <div class="col-1-of-3">
+            <div class="card">
+              <div class="card__side card__side--front">Front</div>
+              <div class="card__side card__side--back card__side--back-3">
+                Back
+              </div>
             </div>
           </div>
         </div>
