--- a/index.html
+++ b/index.html
@@ -231,6 +231,34 @@
           <a href="#" class="btn btn--green">Discover All Tours</a>
         </div>
       </section>
+
+      <section class="section-stories">
+        <div class="u-center-text u-margin-bottom-big">
+          <h2 class="heading-secondary">We make people genuinely happy</h2>
+        </div>
+        <div class="row">
+          <div class="story">
+            <figure class="story__shape">
+              <img
+                class="story__img"
+                src="img/nat-8.jpg"
+                alt="Person on a tour"
+              />
+            </figure>
+            <div class="story__text">
+              <h3 class="heading-tertiary u-margin-bottom-small">
+                I had the best week ever with my family
+              </h3>
+              <p>
+                Lorem ipsum dolor sit amet, consectetur adipisicing elit.
+                Repudiandae eligendi provident voluptates totam repellendus, aut
+                nam labore, sed odit fugiat perferendis necessitatibus?
+                Quibusdam, voluptate consectetur?
+              </p>
+            </div>
+          </div>
+        </div>
+      </section>
     </main>
   </body>
 </html>
