--- a/index.html
+++ b/index.html
@@ -15,6 +15,41 @@
     <title>Natours | Exciting Tour for Adventurous People</title>
   </head>
   <body>
+    <div class="navigation">
+      <input type="checkbox" class="navigation__checkbox" id="navi-toggle" />
+      <label for="navi-toggle" class="navigation__button">
+        <span class="navigation__icon">&nbsp;</span>
+      </label>
+
+      <div class="navigation__background">&nbsp;</div>
+
+      <nav class="navigation__nav">
+        <ul class="navigation__list">
+          <li class="navigation__item">
+            <a href="#" class="navigation__link"
+              ><span>01</span>About Natours</a
+            >
+          </li>
+          <li class="navigation__item">
+            <a href="#" class="navigation__link"
+              ><span>02</span>Your benefits</a
+            >
+          </li>
+          <li class="navigation__item">
+            <a href="#" class="navigation__link"
+              ><span>03</span>Popular tours</a
+            >
+          </li>
+          <li class="navigation__item">
+            <a href="#" class="navigation__link"><span>04</span>Stories</a>
+          </li>
+          <li class="navigation__item">
+            <a href="#" class="navigation__link"><span>05</span>Book now</a>
+          </li>
+        </ul>
+      </nav>
+    </div>
+
     <header class="header">
       <div class="header__logo-box">
         <img src="img/logo-white.png" alt="Logo" class="header__logo" />
@@ -232,9 +267,16 @@
         </div>
       </section>
 
-      <section class="section-stories">
+      <section class="section-testimonials">
+        <div class="bg-video-container">
+          <video class="bg-video-container__video" autoplay muted loop>
+            <source src="img/video.mp4" type="video/mp4" />
+            <source src="img/video.webm" type="video/webm" />
+            Your browser is not supported.
+          </video>
+        </div>
         <div class="u-center-text u-margin-bottom-big">
-          <h2 class="heading-secondary">We make people genuinely happy</h2>
+          <h2 class="heading-secondary">Our tours are simply unforgettable</h2>
         </div>
         <div class="row">
           <div class="story">
@@ -244,6 +286,7 @@
                 src="img/nat-8.jpg"
                 alt="Person on a tour"
               />
+              <figcaption class="story__caption">Jess Hinton</figcaption>
             </figure>
             <div class="story__text">
               <h3 class="heading-tertiary u-margin-bottom-small">
@@ -258,7 +301,129 @@
             </div>
           </div>
         </div>
+        <div class="row">
+          <div class="story">
+            <figure class="story__shape">
+              <img
+                class="story__img"
+                src="img/nat-9.jpg"
+                alt="Person on a tour"
+              />
+              <figcaption class="story__caption">Jack Byrne</figcaption>
+            </figure>
+            <div class="story__text">
+              <h3 class="heading-tertiary u-margin-bottom-small">
+                WOW! My life is completely different now.
+              </h3>
+              <p>
+                Lorem ipsum dolor sit amet, consectetur adipisicing elit.
+                Repudiandae eligendi provident voluptates totam repellendus, aut
+                nam labore, sed odit fugiat perferendis necessitatibus?
+                Quibusdam, voluptate consectetur?
+              </p>
+            </div>
+          </div>
+        </div>
+        <div class="u-center-text u-margin-top-huge">
+          <a href="#" class="btn-text">Read all testimonials &rarr;</a>
+        </div>
+      </section>
+
+      <section class="section-booking">
+        <div class="row">
+          <div class="booking">
+            <div class="booking__form">
+              <form action="#" class="form" autocomplete="off">
+                <div class="u-margin-bottom-medium">
+                  <h2 class="heading-secondary">Start your booking...</h2>
+                </div>
+                <div class="form__group">
+                  <input
+                    class="form__input"
+                    id="name"
+                    placeholder="Full Name"
+                    required
+                  />
+                  <label for="name" class="form__label">Full Name</label>
+                </div>
+                <div class="form__group">
+                  <input
+                    class="form__input"
+                    type="email"
+                    id="email"
+                    placeholder="Email address"
+                    required
+                  />
+                  <label for="email" class="form__label">Email Address</label>
+                </div>
+
+                <div class="form__group u-margin-bottom-medium">
+                  <div class="form__radio-group">
+                    <input
+                      type="radio"
+                      class="form__radio-input"
+                      id="large"
+                      name="tour-size"
+                    /><label for="large" class="form__radio-label"
+                      ><span class="form__radio-button"></span>Small Tour
+                      Group</label
+                    >
+                  </div>
+                  <div class="form__radio-group">
+                    <input
+                      type="radio"
+                      class="form__radio-input"
+                      id="small"
+                      name="tour-size"
+                    /><label for="small" class="form__radio-label"
+                      ><span class="form__radio-button"></span>Large Tour
+                      Group</label
+                    >
+                  </div>
+                </div>
+                <div class="form__group">
+                  <button class="btn btn--green">Next step &rarr;</button>
+                </div>
+              </form>
+            </div>
+          </div>
+        </div>
       </section>
     </main>
+
+    <footer class="footer">
+      <div class="footer__logo-box u-center-text u-margin-bottom-big">
+        <img src="img/logo-green-2x.png" alt="Full logo" class="footer__logo" />
+      </div>
+      <div class="row">
+        <div class="col-1-of-2">
+          <div class="footer__navigation">
+            <ul class="footer__list">
+              <li class="footer__item">
+                <a href="#" class="footer__link">Company</a>
+              </li>
+              <li class="footer__item">
+                <a href="#" class="footer__link">Contact us</a>
+              </li>
+              <li class="footer__item">
+                <a href="#" class="footer__link">Careers</a>
+              </li>
+              <li class="footer__item">
+                <a href="#" class="footer__link">Privacy policy</a>
+              </li>
+              <li class="footer__item">
+                <a href="#" class="footer__link">Terms</a>
+              </li>
+            </ul>
+          </div>
+        </div>
+        <div class="col-1-of-2">
+          <p class="footer__copyright">
+            Copyright &copy; by xandert.93. Original design by Jonas
+            Schmedtmann.
+          </p>
+        </div>
+      </div>
+    </footer>
   </body>
 </html>
