--- a/index.html
+++ b/index.html
@@ -61,7 +61,9 @@
           <span class="heading-primary--main">Outdoors</span>
           <span class="heading-primary--sub">is where life happens</span>
         </h1>
-        <a href="#section-tours" class="btn btn--white btn--animated"
+        <a
+          href="#section-tours"
+          class="btn btn--white btn--animated btn--animated-header"
           >Discover our Tours</a
         >
       </div>
@@ -69,13 +71,13 @@
 
     <main>
       <section class="section-about">
-        <div class="u-center-text u-margin-bottom-big">
+        <div class="u-center-text u-margin-bottom-big fade-in">
           <h2 class="heading-secondary">
             Exciting tours for Adventurous People
           </h2>
         </div>
 
-        <div class="row">
+        <div class="row fade-in">
           <div class="col-1-of-2">
             <h3 class="heading-tertiary u-margin-bottom-small">
               You're going to fall in love with nature
@@ -118,7 +120,7 @@
       </section>
 
       <section class="section-features">
-        <div class="row">
+        <div class="row fade-in">
           <div class="col-1-of-4">
             <div class="feature-box">
               <i class="feature-box__icon icon-basic-world"></i>
@@ -172,9 +174,9 @@
 
       <section class="section-tours" id="section-tours">
         <div class="u-center-text u-margin-bottom-big">
-          <h2 class="heading-secondary">Most popular tours</h2>
+          <h2 class="heading-secondary fade-in">Most popular tours</h2>
         </div>
-        <div class="row">
+        <div class="row slide-in left">
           <div class="col-1-of-3">
             <div class="card">
               <div class="card__side card__side--front">
@@ -267,7 +269,9 @@
           </div>
         </div>
         <div class="u-center-text u-margin-top-huge">
-          <a href="#section-tours" class="btn btn--green">Discover our Tours</a>
+          <a href="#section-tours" class="btn btn--green fade-in"
+            >Discover our Tours</a
+          >
         </div>
       </section>
 
@@ -280,50 +284,54 @@
           </video>
         </div>
         <div class="u-center-text u-margin-bottom-big">
-          <h2 class="heading-secondary">Our tours are simply unforgettable</h2>
+          <h2 class="heading-secondary fade-in">
+            Our tours are simply unforgettable
+          </h2>
         </div>
         <div class="row">
-          <div class="story">
-            <figure class="story__shape">
+          <div class="testimonial slide-in left">
+            <figure class="testimonial__shape">
               <img
-                class="story__img"
+                class="testimonial__img"
                 src="img/nat-8.jpg"
                 alt="Person on a tour"
               />
-              <figcaption class="story__caption">Jess Hinton</figcaption>
+              <figcaption class="testimonial__caption">Jess Hinton</figcaption>
             </figure>
-            <div class="story__text">
+            <div class="testimonial__text">
               <h3 class="heading-tertiary u-margin-bottom-small">
                 I had the best week ever with my family
               </h3>
               <p>
-                Lorem ipsum dolor sit amet, consectetur adipisicing elit.
-                Repudiandae eligendi provident voluptates totam repellendus, aut
-                nam labore, sed odit fugiat perferendis necessitatibus?
-                Quibusdam, voluptate consectetur?
+                Lorem ipsum dolor sit amet consectetur adipisicing elit. Omnis
+                nobis culpa doloribus quae repellendus. Libero corporis
+                dignissimos ut iste quam repudiandae voluptatibus. Quo
+                voluptatibus deleniti sint soluta labore, eius ad molestiae
+                vitae maxime culpa non libero. Nulla a unde consequuntur.
               </p>
             </div>
           </div>
         </div>
         <div class="row">
-          <div class="story">
-            <figure class="story__shape">
+          <div class="testimonial slide-in right">
+            <figure class="testimonial__shape">
               <img
-                class="story__img"
+                class="testimonial__img"
                 src="img/nat-9.jpg"
                 alt="Person on a tour"
               />
-              <figcaption class="story__caption">Jack Byrne</figcaption>
+              <figcaption class="testimonial__caption">Jack Byrne</figcaption>
             </figure>
-            <div class="story__text">
+            <div class="testimonial__text">
               <h3 class="heading-tertiary u-margin-bottom-small">
                 WOW! My life is completely different now.
               </h3>
               <p>
-                Lorem ipsum dolor sit amet, consectetur adipisicing elit.
-                Repudiandae eligendi provident voluptates totam repellendus, aut
-                nam labore, sed odit fugiat perferendis necessitatibus?
-                Quibusdam, voluptate consectetur?
+                Lorem ipsum dolor sit, amet consectetur adipisicing elit.
+                Ducimus quam architecto exercitationem consequatur quasi magni
+                consequuntur, quos maiores iure soluta! Inventore neque facilis
+                expedita blanditiis autem ea perferendis modi, quo tempore
+                optio, amet harum accusamus vero.
               </p>
             </div>
           </div>
@@ -366,10 +374,10 @@
                     <input
                       type="radio"
                       class="form__radio-input"
-                      id="large"
+                      id="small"
                       name="tour-size"
-                    /><label for="large" class="form__radio-label"
-                      ><span class="form__radio-button"></span>Small Tour
+                    /><label for="small" class="form__radio-label"
+                      ><span class="form__radio-button"></span>Large Tour
                       Group</label
                     >
                   </div>
@@ -377,10 +385,10 @@
                     <input
                       type="radio"
                       class="form__radio-input"
-                      id="small"
+                      id="large"
                       name="tour-size"
-                    /><label for="small" class="form__radio-label"
-                      ><span class="form__radio-button"></span>Large Tour
+                    /><label for="large" class="form__radio-label"
+                      ><span class="form__radio-button"></span>Small Tour
                       Group</label
                     >
                   </div>
@@ -464,5 +472,6 @@
         </div>
       </div>
     </div>
+    <script src="script.js"></script>
   </body>
 </html>
