--- a/index.html
+++ b/index.html
@@ -269,9 +269,7 @@
           </div>
         </div>
         <div class="u-center-text u-margin-top-huge">
-          <a href="#section-tours" class="btn btn--green fade-in"
-            >Discover our Tours</a
-          >
+          <a href="#section-tours" class="btn btn--green">Discover our Tours</a>
         </div>
       </section>
 
