add sticky navbar

--- a/index.html
+++ b/index.html
@@ -26,27 +26,19 @@
       <nav class="navigation__nav">
         <ul class="navigation__list">
           <li class="navigation__item">
-            <a href="#" class="navigation__link"
-              ><span>01</span>About Natours</a
-            >
+            <a href="#section-about" class="navigation__link">About</a>
           </li>
           <li class="navigation__item">
-            <a href="#" class="navigation__link"
-              ><span>02</span>Your benefits</a
-            >
+            <a href="#section-features" class="navigation__link">Benefits</a>
           </li>
           <li class="navigation__item">
-            <a href="#" class="navigation__link"
-              ><span>03</span>Popular tours</a
-            >
+            <a href="#section-tours" class="navigation__link">Tours</a>
           </li>
           <li class="navigation__item">
-            <a href="#" class="navigation__link"><span>04</span>Testimonials</a>
+            <a href="#section-testimonials" class="navigation__link">Reviews</a>
           </li>
           <li class="navigation__item">
-            <a href="#popup" class="navigation__link"
-              ><span>05</span>Make a Booking</a
-            >
+            <a href="#popup" class="navigation__link">Booking</a>
           </li>
         </ul>
       </nav>
@@ -58,7 +50,7 @@
       </div>
       <div class="header__text-box">
         <h1 class="heading-primary">
-          <span class="heading-primary--main">Outdoors</span>
+          <span class="heading-primary--main">Natours</span>
           <span class="heading-primary--sub">is where life happens</span>
         </h1>
         <a
@@ -70,7 +62,7 @@
     </header>
 
     <main>
-      <section class="section-about">
+      <section class="section-about" id="section-about">
         <div class="u-center-text u-margin-bottom-big fade-in">
           <h2 class="heading-secondary">
             Exciting tours for Adventurous People
@@ -127,7 +119,7 @@
         </div>
       </section>
 
-      <section class="section-features">
+      <section class="section-features" id="section-features">
         <div class="row fade-in">
           <div class="col-1-of-4">
             <div class="feature-box">
@@ -181,7 +173,7 @@
       </section>
 
       <section class="section-tours" id="section-tours">
-        <div class="u-center-text u-margin-bottom-big">
+        <div class="u-center-text u-margin-bottom-medium">
           <h2 class="heading-secondary fade-in">Most popular tours</h2>
         </div>
         <div class="row slide-in left">
@@ -276,12 +268,12 @@
             </div>
           </div>
         </div>
-        <div class="u-center-text u-margin-top-huge">
+        <div class="u-center-text u-margin-top-medium">
           <a href="#section-tours" class="btn btn--green">Discover our Tours</a>
         </div>
       </section>
 
-      <section class="section-testimonials">
+      <section class="section-testimonials" id="section-testimonials">
         <div class="bg-video-container">
           <video class="bg-video-container__video" autoplay muted loop>
             <source src="img/video.mp4" type="video/mp4" />
@@ -463,7 +455,7 @@
           <img src="img/nat-9.jpg" alt="Tour photo" class="popup__img" />
         </div>
         <div class="popup__right-side">
-          <a href="#section-tours" class="popup__close">&times;</a>
+          <a href="#" class="popup__close">&times;</a>
           <h2 class="heading-secondary u-margin-bottom-small">
             adventure awaits...
           </h2>
