--- a/index.html
+++ b/index.html
@@ -87,7 +87,9 @@
               Lorem ipsum dolor sit amet consectetur adipisicing elit. Alias
               pariatur consectetur amet omnis sapiente illum quo consequuntur
             </p>
-            <a href="#" class="btn-text">Learn more &rarr;</a>
+            <a href="/" onclick="return false;" class="btn-text"
+              >Learn more &rarr;</a
+            >
           </div>
           <div class="col-1-of-2">
             <div class="composition">
@@ -335,7 +337,9 @@
           </div>
         </div>
         <div class="u-center-text u-margin-top-huge">
-          <a href="#" class="btn-text">Read all testimonials &rarr;</a>
+          <a href="/" onclick="return false;" class="btn-text"
+            >Read all testimonials &rarr;</a
+          >
         </div>
       </section>
 
@@ -422,19 +426,29 @@
           <div class="footer__navigation">
             <ul class="footer__list">
               <li class="footer__item">
-                <a href="#" class="footer__link">Company</a>
+                <a href="/" onclick="return false;" class="footer__link"
+                  >Company</a
+                >
               </li>
               <li class="footer__item">
-                <a href="#" class="footer__link">Contact us</a>
+                <a href="/" onclick="return false;" class="footer__link"
+                  >Contact us</a
+                >
               </li>
               <li class="footer__item">
-                <a href="#" class="footer__link">Careers</a>
+                <a href="/" onclick="return false;" class="footer__link"
+                  >Careers</a
+                >
               </li>
               <li class="footer__item">
-                <a href="#" class="footer__link">Privacy policy</a>
+                <a href="/" onclick="return false;" class="footer__link"
+                  >Privacy policy</a
+                >
               </li>
               <li class="footer__item">
-                <a href="#" class="footer__link">Terms</a>
+                <a href="/" onclick="return false;" class="footer__link"
+                  >Terms</a
+                >
               </li>
             </ul>
           </div>
