--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
       <div class="header__text-box">
         <h1 class="heading-primary">
           <span class="heading-primary--main">Natours</span>
-          <span class="heading-primary--sub">This is where life happens</span>
+          <span class="heading-primary--sub">It's where life happens</span>
         </h1>
         <a
           href="#section-tours"
