--- a/index.html
+++ b/index.html
@@ -26,6 +26,9 @@
 
       <nav class="navigation__nav">
         <ul class="navigation__list">
+          <li class="navigation__item navigation__item--logo-box">
+            <img src="img/logo-white.png" alt="Logo" class="navigation__logo" />
+          </li>
           <li class="navigation__item">
             <a href="#section-about" class="navigation__link">About</a>
           </li>
