--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
 
       <div class="navigation__background">&nbsp;</div>
 
-      <nav class="navigation__nav">
+      <nav class="navigation__nav" onclick="closeNav(event)">
         <ul class="navigation__list">
           <li class="navigation__item navigation__item--logo-box">
             <img src="img/logo-white.png" alt="Logo" class="navigation__logo" />
@@ -42,7 +42,10 @@
             <a href="#section-testimonials" class="navigation__link">Reviews</a>
           </li>
           <li class="navigation__item">
-            <a href="#" onclick="showModal(event)" class="navigation__link"
+            <a
+              href="#"
+              onclick="toggleModal(event)"
+              class="navigation__link navigation__link--btn"
               >Booking</a
             >
           </li>
@@ -210,7 +213,10 @@
                     <p class="card__price-only">Only</p>
                     <p class="card__price-value">£299</p>
                   </div>
-                  <a href="#" onclick="showModal(event)" class="btn btn--white"
+                  <a
+                    href="#"
+                    onclick="toggleModal(event)"
+                    class="btn btn--white"
                     >Book now!</a
                   >
                 </div>
@@ -242,7 +248,10 @@
                     <p class="card__price-only">Only</p>
                     <p class="card__price-value">£399</p>
                   </div>
-                  <a href="#" onclick="showModal(event)" class="btn btn--white"
+                  <a
+                    href="#"
+                    onclick="toggleModal(event)"
+                    class="btn btn--white"
                     >Book now!</a
                   >
                 </div>
@@ -274,7 +283,10 @@
                     <p class="card__price-only">Only</p>
                     <p class="card__price-value">£499</p>
                   </div>
-                  <a href="#" onclick="showModal(event)" class="btn btn--white"
+                  <a
+                    href="#"
+                    onclick="toggleModal(event)"
+                    class="btn btn--white"
                     >Book now!</a
                   >
                 </div>
@@ -474,14 +486,14 @@
       </div>
     </footer>
 
-    <div class="popup" onclick="closeModal(event)" id="popup">
+    <div class="popup" onclick="toggleModal(event)" id="popup">
       <div class="popup__body">
         <div class="popup__left-side">
           <img src="img/nat-8.jpg" alt="Tour photo" class="popup__img" />
           <img src="img/nat-9.jpg" alt="Tour photo" class="popup__img" />
         </div>
         <div class="popup__right-side">
-          <a href="#" onclick="closeModal(event)" class="popup__close"
+          <a href="#" onclick="toggleModal(event)" class="popup__close"
             >&times;</a
           >
           <h2 class="heading-secondary u-margin-bottom-small">
@@ -508,7 +520,7 @@
           </p>
           <a
             href="#section-booking"
-            onclick="closeModal(event)"
+            onclick="toggleModal(event)"
             class="btn btn--green"
             >Book now</a
           >
