--- a/index.html
+++ b/index.html
@@ -187,7 +187,7 @@
         <div class="u-center-text u-margin-bottom-medium">
           <h2 class="heading-secondary fade-in">Most popular tours</h2>
         </div>
-        <div class="row slide-in left">
+        <div class="row slide-in left" onclick="toggleModal(event)">
           <div class="col-1-of-3">
             <div class="card">
               <div class="card__side card__side--front">
@@ -213,12 +213,7 @@
                     <p class="card__price-only">Only</p>
                     <p class="card__price-value">£299</p>
                   </div>
-                  <a
-                    href="#"
-                    onclick="toggleModal(event)"
-                    class="btn btn--white"
-                    >Book now!</a
-                  >
+                  <a href="#" class="btn btn--white">Book now!</a>
                 </div>
               </div>
             </div>
@@ -248,12 +243,7 @@
                     <p class="card__price-only">Only</p>
                     <p class="card__price-value">£399</p>
                   </div>
-                  <a
-                    href="#"
-                    onclick="toggleModal(event)"
-                    class="btn btn--white"
-                    >Book now!</a
-                  >
+                  <a href="#" class="btn btn--white">Book now!</a>
                 </div>
               </div>
             </div>
@@ -283,12 +273,7 @@
                     <p class="card__price-only">Only</p>
                     <p class="card__price-value">£499</p>
                   </div>
-                  <a
-                    href="#"
-                    onclick="toggleModal(event)"
-                    class="btn btn--white"
-                    >Book now!</a
-                  >
+                  <a href="#" class="btn btn--white">Book now!</a>
                 </div>
               </div>
             </div>
@@ -493,9 +478,7 @@
           <img src="img/nat-9.jpg" alt="Tour photo" class="popup__img" />
         </div>
         <div class="popup__right-side">
-          <a href="#" onclick="toggleModal(event)" class="popup__close"
-            >&times;</a
-          >
+          <a href="#" class="popup__close">&times;</a>
           <h2 class="heading-secondary u-margin-bottom-small">
             adventure awaits...
           </h2>
@@ -518,12 +501,7 @@
             donec. Sit amet facilisis magna etiam. Imperdiet sed euismod nisi
             porta.
           </p>
-          <a
-            href="#section-booking"
-            onclick="toggleModal(event)"
-            class="btn btn--green"
-            >Book now</a
-          >
+          <a href="#section-booking" class="btn btn--green">Book now</a>
         </div>
       </div>
     </div>
